@@ -1,3 +1,10 @@
+2018-12-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* g++.dg/other/bitfield7.C: New.
+	* g++.dg/parse/bitfield8.C: Likewise.
+	* g++.dg/parse/bitfield9.C: Likewise.
+	* g++.dg/pr53037-4.C: Test the locations too.
+
 2018-12-07  Peter Bergner  <bergner@linux.ibm.com>
 
 	PR target/87496
