@@ -1,3 +1,9 @@
+2018-12-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* decl2.c (grokbitfield): Use DECL_SOURCE_LOCATION in error messages
+	about bit-fields with function type, warn_if_not_aligned type, and
+	static bit-fields; avoid DECL_NAME for unnamed declarations.
+
 2018-12-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/86669
